# vulkan-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: lto.helper.cmake  test.helper.cmake  tidy.helper.cmake
cmake/GLSL/: CMakeDetermineGLSLCompiler.cmake  CMakeGLSLCompiler.cmake.in  CMakeGLSLInformation.cmake  CMakeTestGLSLCompiler.cmake
common/: CMakeLists.txt
common/include/: handle_wrapper.hh  to_array.hh  vulkan_helper_types.hh  vulkan_to_string.hh  vulkan_version.hh
common/src/: header_check.cc  vulkan_to_string.cc  vulkan_version.hh
glfw_wrappers/: CMakeLists.txt
glfw_wrappers/include/: glfw_context_wrapper.hh  glfw_window_wrapper.hh
glfw_wrappers/src/: glfw_context_wrapper.cc  glfw_window_wrapper.cc
main/: CMakeLists.txt
main/src/: functional_do.hh  main_aliases.hh  main_utility_functions.cc  main_utility_functions.hh  monad.hh  monad_impl_optional.hh  optional_monad.hh  vulkan_app.cc  vulkan_app.hh  vulkan_main.cc
shaders/: CMakeLists.txt  simple.frag.glsl  simple.vert.glsl
vulkan_wrappers/: CMakeLists.txt
vulkan_wrappers/include/: vulkan_framebuffer_wrapper.hh  vulkan_image_view_wrapper.hh  vulkan_instance_wrapper.hh  vulkan_logical_device_wrapper.hh  vulkan_pipeline_layout_wrapper.hh  vulkan_pipeline_wrapper.hh  vulkan_render_pass_wrapper.hh  vulkan_shader_module_wrapper.hh  vulkan_surface_wrapper.hh  vulkan_swapchain_wrapper.hh
vulkan_wrappers/src/: vulkan_framebuffer_wrapper.cc  vulkan_image_view_wrapper.cc  vulkan_instance_wrapper.cc  vulkan_logical_device_wrapper.cc  vulkan_pipeline_layout_wrapper.cc  vulkan_pipeline_wrapper.cc  vulkan_render_pass_wrapper.cc  vulkan_shader_module_wrapper.cc  vulkan_surface_wrapper.cc  vulkan_swapchain_wrapper.cc
